updated schema; added nav links, style sheet, logo

--- a/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/Views/Home/Index.cshtml
@@ -1,1 +1,23 @@
-﻿We're HOME!
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Async Inn - Home</title>
+    <link href="~/StyleSheet.css" rel="stylesheet" />
+</head>
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="/Hotel/Index">View and Manage Hotel Locations</a>
+                <a href="/Inventory/Index">View and Manage Rooms Inventory</a>
+                <a href="/RoomPlan/Index">View and Manage Room Plans</a>
+                <a href="/RoomConfig/Index">View and Manage Amenity Configurations</a>
+                <a href="/Amenity/Index">View and Manage Amenities</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <img src="logo.PNG" alt="Async Inn logo" />
+    </div>
+</body>
+</html>
