updated home page links and styling

--- a/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/Views/Home/Index.cshtml
@@ -2,22 +2,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Async Inn - Home</title>
+    <link href="~/reset.css" rel="stylesheet" />
     <link href="~/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
+    <header></header>
     <nav>
         <ul>
             <li>
-                <a href="/Hotel/Index">View and Manage Hotel Locations</a>
-                <a href="/Inventory/Index">View and Manage Rooms Inventory</a>
-                <a href="/RoomPlan/Index">View and Manage Room Plans</a>
-                <a href="/RoomConfig/Index">View and Manage Amenity Configurations</a>
-                <a href="/Amenity/Index">View and Manage Amenities</a>
+                <a href="/Hotel/Index">Hotel Locations</a>
+                <a href="/Inventory/Index">Rooms Inventory</a>
+                <a href="/RoomPlan/Index">Room Plans</a>
+                <a href="/RoomConfig/Index">Amenity Configurations</a>
+                <a href="/Amenity/Index">Amenities</a>
             </li>
         </ul>
     </nav>
-    <div>
-        <img src="logo.PNG" alt="Async Inn logo" />
+    <div id="logo">
+        <img id="logoimg" src="https://www.freeiconspng.com/uploads/circle-png-7.png" width="350" alt="circle effects png">
+        <div id="logotext">
+            <h1>ASYNC INN</h1>
+            <p>Ready when you are</p>
+        </div>
     </div>
+   
 </body>
 </html>
