--- a/AsyncInn/wwwroot/StyleSheet.css
+++ b/AsyncInn/wwwroot/StyleSheet.css
@@ -1,7 +1,58 @@
 ﻿body {
-    background-color: antiquewhite;
+    background-color: #d7faf78c;
 }
 
-image {
-    background-color: antiquewhite;
+header {
+    height: 50px;
+}
+
+nav {
+    margin-left: 50px;
+    margin-top: 100px;
+    float: left;
+    width: 30%;
+}
+
+    nav li > a {
+        display: block;
+        margin-bottom: 10px;
+        font-size: 20px;
+        color: #178ac7;
+    }
+
+#logo {
+    position: relative;
+    display: inline-block;
+    width: 40%;
+}
+
+
+#logoimg {
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    display: flex;
+}
+
+
+#logotext {
+    width: 100%;
+    margin-top: 42%;
+    display: block;
+    color: #178ac7;
+    text-align: center;
+}
+
+    #logotext > h1 {
+        font-size: 275%;
+    }
+
+    #logotext > p {
+        position: relative;
+        font-size: 150%;
+    }
+
+:hover {
+    color: blueviolet;
 }
