--- a/AsyncInn/wwwroot/StyleSheet.css
+++ b/AsyncInn/wwwroot/StyleSheet.css
@@ -3,7 +3,8 @@
 }
 
 header {
-    height: 50px;
+    min-height: 50px;
+    margin-bottom: 10px;
 }
 
 nav {
@@ -23,7 +24,7 @@ nav {
 #logo {
     position: relative;
     display: inline-block;
-    width: 40%;
+    width: 45%;
 }
 
 
@@ -45,13 +46,18 @@ nav {
 }
 
     #logotext > h1 {
-        font-size: 275%;
+        font-size: 5vw;
+        font-weight: bold;
     }
 
     #logotext > p {
         position: relative;
-        font-size: 150%;
+        font-size: 3vw;
     }
+
+th, td {
+    margin: 5px;
+}
 
 :hover {
     color: blueviolet;
