--- a/AsyncInn/Views/Amenity/Index.cshtml
+++ b/AsyncInn/Views/Amenity/Index.cshtml
@@ -13,7 +13,7 @@
         <h2>Amenities</h2>
         <p>This is a complete list of all amenities available for installation in rooms at Async Inn locations.</p>
         <p>
-            <a asp-action="Create">Create New</a>
+            <a asp-action="Create">Click here to new amenities that can be installed in rooms.</a>
         </p>
     </header>
     <table class="table">
@@ -32,7 +32,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
-                    <td>
+                    <td class="item-links" >
                         <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                         <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                         <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
