--- a/AsyncInn/Views/Hotel/Create.cshtml
+++ b/AsyncInn/Views/Hotel/Create.cshtml
@@ -41,12 +41,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="State" class="control-label"></label>
-                <select asp-for="State" class="form-control"></select>
+                <select asp-for="State" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.State>()"></select>
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Country" class="control-label"></label>
-                <select asp-for="Country" class="form-control"></select>
+                <select asp-for="Country" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Country>()">></select>
                 <span asp-validation-for="Country" class="text-danger"></span>
             </div>
             <div class="form-group">
