--- a/AsyncInn/Views/Inventory/Index.cshtml
+++ b/AsyncInn/Views/Inventory/Index.cshtml
@@ -13,7 +13,7 @@
         <h2>Rooms Inventory</h2>
         <p>This is a complete inventory of all rooms in all Async Inn locations.</p>
         <p>
-            <a asp-action="Create">Create New</a>
+            <a asp-action="Create">Click here to add a room to a specific location.</a>
         </p>
     </header>
     <table class="table">
@@ -56,7 +56,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.RoomPlan.ID)
                     </td>
-                    <td>
+                    <td class="item-links">
                         @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
                         @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
