--- a/AsyncInn/Views/RoomPlan/Index.cshtml
+++ b/AsyncInn/Views/RoomPlan/Index.cshtml
@@ -14,7 +14,7 @@
         <p>Create a new room plan by selecting the room size.</p>
         <p>Configure the amenities for the new room plan on the 'Amenity Configurations' page.</p>
         <p>
-            <a asp-action="Create">Create New</a>
+            <a asp-action="Create">Click here to create a new room plan.</a>
         </p>
     </header>
 <table class="table">
@@ -33,9 +33,9 @@
                 @Html.DisplayFor(modelItem => item.Layout)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a id="item-links" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                <a id="item-links" asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                <a id="item-links" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
