--- a/AsyncInn/wwwroot/StyleSheet.css
+++ b/AsyncInn/wwwroot/StyleSheet.css
@@ -86,7 +86,13 @@ table {
     margin: 5vw auto;
 }
 
+td {
+    background-color: lightgray;
+    color: #368b8e;
+}
+
 th, td {
+    text-align: center;
     font-size: 1.5vw;
     padding-left: 20px;
     padding-right: 20px;
@@ -100,4 +106,9 @@ th, td {
 
 :visited {
     color: #01579B
+}
+
+.item-links {
+    color: white;
+    background-color: #368b8e;
 }
