--- a/AsyncInn/Views/RoomPlans/Delete.cshtml
+++ b/AsyncInn/Views/RoomPlans/Delete.cshtml
@@ -7,12 +7,9 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Details</title>
-</head>
 <body>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>RoomPlan</h4>
     <hr />
@@ -24,10 +21,12 @@
             @Html.DisplayFor(model => model.Layout)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="ID" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
 </body>
 </html>
