--- a/AsyncInn/Views/Inventory/Index.cshtml
+++ b/AsyncInn/Views/Inventory/Index.cshtml
@@ -57,9 +57,9 @@
                         @Html.DisplayFor(modelItem => item.RoomPlan.ID)
                     </td>
                     <td class="item-links">
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                        @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
                         @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        @*@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
                     </td>
                 </tr>
             }
