--- a/AsyncInn/Views/RoomConfig/Edit.cshtml
+++ b/AsyncInn/Views/RoomConfig/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model AsyncInn.Models.RoomConfig
+﻿
+@model AsyncInn.Models.RoomConfig
 
 @{
     Layout = null;
@@ -7,10 +8,6 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
 <body>
 
 <h4>RoomConfig</h4>
