--- a/AsyncInn/Views/RoomPlans/Create.cshtml
+++ b/AsyncInn/Views/RoomPlans/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AsyncInn.Models.RoomConfig
+﻿@model AsyncInn.Models.RoomPlan
 
 @{
     Layout = null;
@@ -9,19 +9,16 @@
 <html>
 <body>
 
-<h4>RoomConfig</h4>
+<h4>RoomPlan</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RoomPlanID" class="control-label"></label>
-                <select asp-for="RoomPlanID" class ="form-control" asp-items="ViewBag.RoomPlanID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="AmenityID" class="control-label"></label>
-                <select asp-for="AmenityID" class ="form-control" asp-items="ViewBag.AmenityID"></select>
+                <label asp-for="Layout" class="control-label"></label>
+                <select asp-for="Layout" class="form-control"></select>
+                <span asp-validation-for="Layout" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
