--- a/AsyncInn/Views/RoomPlans/Details.cshtml
+++ b/AsyncInn/Views/RoomPlans/Details.cshtml
@@ -7,13 +7,8 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
 <body>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>RoomPlan</h4>
     <hr />
@@ -25,12 +20,10 @@
             @Html.DisplayFor(model => model.Layout)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
 </body>
 </html>
