--- a/AsyncInn/Views/RoomPlans/Edit.cshtml
+++ b/AsyncInn/Views/RoomPlans/Edit.cshtml
@@ -7,25 +7,22 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
 <body>
 
 <h4>RoomPlan</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="ID" />
             <div class="form-group">
                 <label asp-for="Layout" class="control-label"></label>
-                <select asp-for="Layout" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Layout>()"></select>
+                <select asp-for="Layout" class="form-control"></select>
                 <span asp-validation-for="Layout" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
