--- a/AsyncInn/Views/Inventory/Details.cshtml
+++ b/AsyncInn/Views/Inventory/Details.cshtml
@@ -14,12 +14,12 @@
     <h4>Inventory</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ID)
-        </dt>
-        <dd class = "col-sm-10">
+        </dt>*@
+        @*<dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ID)
-        </dd>
+        </dd>*@
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rate)
         </dt>
