--- a/AsyncInn/Views/Inventory/Edit.cshtml
+++ b/AsyncInn/Views/Inventory/Edit.cshtml
@@ -16,11 +16,11 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="ID" class="control-label"></label>
                 <input asp-for="ID" class="form-control" />
                 <span asp-validation-for="ID" class="text-danger"></span>
-            </div>
+            </div>*@
             <input type="hidden" asp-for="RoomNumber" />
             <div class="form-group">
                 <label asp-for="Rate" class="control-label"></label>
