Updated RoomConfig routes and select lists

--- a/AsyncInn/Views/RoomConfig/Index.cshtml
+++ b/AsyncInn/Views/RoomConfig/Index.cshtml
@@ -31,15 +31,15 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.RoomPlan.ID)
+                        @Html.DisplayFor(modelItem => item.RoomPlan.RoomType)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Amenity.ID)
+                        @Html.DisplayFor(modelItem => item.Amenity.Description)
                     </td>
                     <td class="item-links">
                         @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @*@Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                        @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
+                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
                     </td>
                 </tr>
             }
