added Go Home link to all index pages

--- a/AsyncInn/Views/Amenity/Index.cshtml
+++ b/AsyncInn/Views/Amenity/Index.cshtml
@@ -15,6 +15,10 @@
         <p>
             <a asp-action="Create">Click here to new amenities that can be installed in rooms.</a>
         </p>
+        <p>
+            <a asp-controller="Home"
+               asp-action="Index">Go Home</a>
+        </p>
     </header>
     <table class="table">
         <thead>
