--- a/AsyncInn/Views/Hotel/Index.cshtml
+++ b/AsyncInn/Views/Hotel/Index.cshtml
@@ -15,6 +15,10 @@
         <p>
             <a asp-action="Create">Click here to create a new Async Inn location.</a>
         </p>
+        <p>
+            <a asp-controller="Home"
+               asp-action="Index">Go Home</a>
+        </p>
     </header>
     <table class="table">
         <thead>
