--- a/AsyncInn/Views/RoomConfig/Index.cshtml
+++ b/AsyncInn/Views/RoomConfig/Index.cshtml
@@ -13,6 +13,10 @@
         <p>
             <a asp-action="Create">Click here to add amenities to an existing room plan.</a>
         </p>
+        <p>
+            <a asp-controller="Home"
+               asp-action="Index">Go Home</a>
+        </p>
     </header>
     <table class="table">
         <thead>
