updated inputs for most pages

--- a/AsyncInn/Views/Home/Index.cshtml
+++ b/AsyncInn/Views/Home/Index.cshtml
@@ -10,11 +10,16 @@
     <nav>
         <ul>
             <li>
-                <a href="/Hotel/Index">Hotel Locations</a>
+                <a asp-controller="Hotel" asp-action="Index">Hotel Locations</a>
+                <a asp-controller="Inventory" asp-action="Index">Rooms Inventory</a>
+                <a asp-controller="RoomPlan" asp-action="Index">Room Plans</a>
+                <a asp-controller="RoomConfig" asp-action="Index">Amenity Configurations</a>
+                <a asp-controller="Amenity" asp-action="Index">Amenities</a>
+                @*<a href="/Hotel/Index">Hotel Locations</a>
                 <a href="/Inventory/Index">Rooms Inventory</a>
                 <a href="/RoomPlan/Index">Room Plans</a>
                 <a href="/RoomConfig/Index">Amenity Configurations</a>
-                <a href="/Amenity/Index">Amenities</a>
+                <a href="/Amenity/Index">Amenities</a>*@
             </li>
         </ul>
     </nav>
