--- a/AsyncInn/Views/Inventory/Create.cshtml
+++ b/AsyncInn/Views/Inventory/Create.cshtml
@@ -16,14 +16,19 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<div class="form-group">
-                <label asp-for="ID" class="control-label"></label>
-                <input asp-for="ID" class="form-control" />
-                <span asp-validation-for="ID" class="text-danger"></span>
-            </div>*@
+            <label asp-for="ID" class="control-label"></label>
+            <input asp-for="ID" class="form-control" />
+            <span asp-validation-for="ID" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <label asp-for="RoomNumber" class="control-label"></label>
                 <input asp-for="RoomNumber" class="form-control" />
                 <span asp-validation-for="RoomNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RoomName" class="control-label"></label>
+                <input asp-for="RoomName" class="form-control" />
+                <span asp-validation-for="RoomName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Rate" class="control-label"></label>
@@ -37,11 +42,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="HotelID" class="control-label"></label>
-                <select asp-for="HotelID" class ="form-control" asp-items="ViewBag.HotelID"></select>
+                <select asp-for="HotelID" class="form-control" asp-items="ViewBag.HotelID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="RoomPlanID" class="control-label"></label>
-                <select asp-for="RoomPlanID" class ="form-control" asp-items="ViewBag.RoomPlanID"></select>
+                <select asp-for="RoomPlanID" class="form-control" asp-items="ViewBag.RoomPlanID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
