--- a/AsyncInn/Views/RoomPlan/Create.cshtml
+++ b/AsyncInn/Views/RoomPlan/Create.cshtml
@@ -16,6 +16,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="RoomType" class="control-label"></label>
+                <input asp-for="RoomType" class="form-control" />
+                <span asp-validation-for="RoomType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Layout" class="control-label"></label>
                 <select asp-for="Layout" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Layout>()"></select>
             </div>
