--- a/AsyncInn/Views/RoomPlan/Index.cshtml
+++ b/AsyncInn/Views/RoomPlan/Index.cshtml
@@ -32,12 +32,12 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Layout)
+                        @Html.DisplayFor(modelItem => item.RoomType)
                     </td>
                     <td>
-                        <a id="item-links" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                        <a id="item-links" asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                        <a id="item-links" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                        @*<a id="item-links" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |*@
+                        <a id="item-links" asp-action="Details" asp-route-id="@item.ID">Details</a> @*|
+                        <a id="item-links" asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
                     </td>
                 </tr>
             }
