--- a/AsyncInn/Views/Inventory/Index.cshtml
+++ b/AsyncInn/Views/Inventory/Index.cshtml
@@ -67,8 +67,8 @@
                     @Html.DisplayFor(modelItem => item.PetsOK)
                 </td>
                 <td class="item-links">
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) @*|
+                    @Html.ActionLink("Edit", "Edit", new { item.HotelID, item.RoomNumber }) |
+                    @Html.ActionLink("Details", "Details", new { item.HotelID, item.RoomNumber }) @*|
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
                 </td>
             </tr>
