--- a/AsyncInn/Views/Amenity/Index.cshtml
+++ b/AsyncInn/Views/Amenity/Index.cshtml
@@ -37,8 +37,8 @@
                         @Html.DisplayFor(modelItem => item.Description)
                     </td>
                     <td class="item-links" >
-                        <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                        @*<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Details</a> |*@
                         <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
                     </td>
                 </tr>
