--- a/AsyncInn/Views/Inventory/Details.cshtml
+++ b/AsyncInn/Views/Inventory/Details.cshtml
@@ -47,7 +47,7 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { ViewBag.HotelID, ViewBag.RoomNumber }) |
     <a asp-action="Index">Back to List</a>
 </div>
 </body>
