--- a/AsyncInn/Views/RoomConfig/Create.cshtml
+++ b/AsyncInn/Views/RoomConfig/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AsyncInn.Models.RoomConfig
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -34,8 +34,8 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
 </body>
 </html>
