--- a/AsyncInn/Delete.cshtml
+++ b/AsyncInn/Delete.cshtml
@@ -13,7 +13,7 @@
 <div>
     <h4>RoomConfig</h4>
     <hr />
-    <dl class="row details-table">
+    <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RoomPlan)
         </dt>
