--- a/AsyncInn/Views/Amenity/Details.cshtml
+++ b/AsyncInn/Views/Amenity/Details.cshtml
@@ -16,7 +16,7 @@
 <div>
     <h4>Amenity</h4>
     <hr />
-    <dl class="row">
+    <dl class="row details-table">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
         </dt>
@@ -25,7 +25,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="backtolist">
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
