--- a/AsyncInn/Views/Hotel/Details.cshtml
+++ b/AsyncInn/Views/Hotel/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AsyncInn.Models.Hotel
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -13,7 +13,7 @@
 <div>
     <h4>Hotel</h4>
     <hr />
-    <dl class="row">
+    <dl class="row details-table">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -52,7 +52,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="backtolist">
     <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
