--- a/AsyncInn/Views/Inventory/Details.cshtml
+++ b/AsyncInn/Views/Inventory/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AsyncInn.Models.Inventory
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -13,7 +13,7 @@
 <div>
     <h4>Inventory</h4>
     <hr />
-    <dl class="row">
+    <dl class="row details-table">
         @*<dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ID)
         </dt>*@
@@ -46,7 +46,7 @@
         </dd>
     </dl>
 </div>
-<div>
+<div class="backtolist">
     @Html.ActionLink("Edit", "Edit", new { ViewBag.HotelID, ViewBag.RoomNumber }) |
     <a asp-action="Index">Back to List</a>
 </div>
