--- a/AsyncInn/Views/RoomConfig/Index.cshtml
+++ b/AsyncInn/Views/RoomConfig/Index.cshtml
@@ -43,7 +43,7 @@
                     <td class="item-links">
                         @*@Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |*@
                         @*@Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |*@
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                        @Html.ActionLink("Delete", "Delete", new { item.RoomPlanID, item.AmenityID })
                     </td>
                 </tr>
             }
