--- a/AsyncInn/Views/RoomPlan/Create.cshtml
+++ b/AsyncInn/Views/RoomPlan/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AsyncInn.Models.RoomPlan
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -9,34 +9,34 @@
 <html>
 <body>
 
-<h4>RoomPlan</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="RoomType" class="control-label"></label>
-                <input asp-for="RoomType" class="form-control" />
-                <span asp-validation-for="RoomType" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Layout" class="control-label"></label>
-                <select asp-for="Layout" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Layout>()"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h4>RoomPlan</h4>
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="RoomType" class="control-label"></label>
+                    <input asp-for="RoomType" class="form-control" />
+                    <span asp-validation-for="RoomType" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Layout" class="control-label"></label>
+                    <select asp-for="Layout" class="form-control" asp-items="@Html.GetEnumSelectList<AsyncInn.Models.Layout>()"></select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div class="backtolist">
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @*@section Scripts {
+            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        }*@
 </body>
 </html>
