--- a/AsyncInn/Views/RoomPlan/Edit.cshtml
+++ b/AsyncInn/Views/RoomPlan/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AsyncInn.Models.RoomPlan
 
 @{
-    Layout = null;
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -28,12 +28,12 @@
     </div>
 </div>
 
-<div>
+<div class="backtolist">
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
 </body>
 </html>
