counts implemented - room and amenity counts don't display as expected

--- a/AsyncInn/Views/Hotel/Index.cshtml
+++ b/AsyncInn/Views/Hotel/Index.cshtml
@@ -73,6 +73,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Country)
                 </td>
+                @* HELP! How can I make the count publish? The 'td' is rendering, but it's empty.*@
                 <td>
                     @Html.DisplayFor(modelItem => item.HotelInventory.Count)
                 </td>
