--- a/AsyncInn/Views/RoomPlan/Index.cshtml
+++ b/AsyncInn/Views/RoomPlan/Index.cshtml
@@ -45,9 +45,9 @@
                         @Html.DisplayFor(modelItem => item.RoomType)
                     </td>
                     <td>
-                        @*<a id="item-links" asp-action="Edit" asp-route-id="@item.ID">Edit</a> |*@
-                        <a id="item-links" asp-action="Details" asp-route-id="@item.ID">Details</a> @*|
-                            <a id="item-links" asp-action="Delete" asp-route-id="@item.ID">Delete</a>*@
+                        <a id="item-links" asp-action="Details" asp-route-id="@item.ID">Details</a>
+                    </td>                    <td>
+                        <a id="item-links" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
                     </td>
                 </tr>
             }
