all routes, views, actions confirmed

--- a/AsyncInn/Views/Hotel/Delete.cshtml
+++ b/AsyncInn/Views/Hotel/Delete.cshtml
@@ -14,7 +14,7 @@
 <div>
     <h4>Hotel</h4>
     <hr />
-    <dl class="row">
+    <dl class="row details-table">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
