--- a/AsyncInn/Views/Inventory/Index.cshtml
+++ b/AsyncInn/Views/Inventory/Index.cshtml
@@ -62,10 +62,10 @@
                     @Html.DisplayFor(modelItem => item.RoomNumber)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RoomName)
+                    @Html.DisplayFor(modelItem => item.RoomPlan.RoomType)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RoomPlan.RoomType)
+                    @Html.DisplayFor(modelItem => item.RoomName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Rate)
@@ -73,14 +73,12 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.PetsOK)
                 </td>
-                @*HELP! How to display count? The 'th' is rendering, but it's blank.*@
                 <th>
                     @Html.DisplayFor(modelItem => item.RoomPlan.RoomConfigGroup.Count)
                 </th>
                 <td class="item-links">
                     @Html.ActionLink("Edit", "Edit", new { item.HotelID, item.RoomNumber }) |
-                    @Html.ActionLink("Details", "Details", new { item.HotelID, item.RoomNumber }) @*|
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
+                    @Html.ActionLink("Delete", "Delete", new { item.HotelID, item.RoomNumber })
                 </td>
             </tr>
             }
