--- a/AsyncInn/Views/RoomPlan/Delete.cshtml
+++ b/AsyncInn/Views/RoomPlan/Delete.cshtml
@@ -13,7 +13,7 @@
 <div>
     <h4>RoomPlan</h4>
     <hr />
-    <dl class="row">
+    <dl class="row details-table">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Layout)
         </dt>
