--- a/AsyncInn/Views/Inventory/Delete.cshtml
+++ b/AsyncInn/Views/Inventory/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AsyncInn.Models.RoomConfig
+﻿@model AsyncInn.Models.Inventory
 
 @{
     Layout = "_Layout";
@@ -11,26 +11,50 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>RoomConfig</h4>
+    <h4>Inventory</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2 details-table">
+    <dl class="row details-table">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RoomName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RoomName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.RoomNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.RoomNumber)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hotel)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hotel.Name)
+        </dd>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RoomPlan)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RoomPlan.RoomType)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amenity)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Rate)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amenity.Description)
-        </dd class>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Rate)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PetsOK)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PetsOK)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="RoomPlanID" />
-        <input type="hidden" asp-for="AmenityID" />
+        <input type="hidden" asp-for="HotelID" />
+        <input type="hidden" asp-for="RoomNumber" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
